<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_blue"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:paddingBottom="@dimen/common_padding_middle"
    tools:context=".UserActivity"
    tools:showIn="@layout/activity_user">

<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/clScrollUser"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/common_padding_middle"
    android:layout_marginEnd="@dimen/common_padding_middle"
    android:layout_marginBottom="@dimen/common_padding_middle"
    android:layout_marginTop="120dp"
    >
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilName"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/nombre"
        android:textColorHint="@color/dark_yellow"
        app:hintTextColor="@color/yellow"
        android:textStyle="bold"
        app:boxStrokeColor="@color/yellow"
        app:endIconMode="clear_text"
        app:endIconTint="@color/dark_yellow"
        app:layout_constraintStart_toStartOf="@id/clScrollUser"
        app:layout_constraintTop_toTopOf="@id/clScrollUser"
        app:layout_constraintEnd_toEndOf="@id/clScrollUser">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textColor="@color/yellow" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilSurname"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_padding_default"
        android:hint="@string/surname"
        android:textColorHint="@color/dark_yellow"
        app:hintTextColor="@color/yellow"
        android:textStyle="bold"
        app:boxStrokeColor="@color/yellow"
        app:endIconMode="clear_text"
        app:endIconTint="@color/dark_yellow"
        app:layout_constraintStart_toStartOf="@id/clScrollUser"
        app:layout_constraintTop_toBottomOf="@id/tilName"
        app:layout_constraintEnd_toEndOf="@id/clScrollUser">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etSurname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textColor="@color/yellow" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilMail"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_padding_default"
        android:layout_marginEnd="@dimen/common_padding_min"
        android:hint="@string/email"
        android:textColorHint="@color/dark_yellow"
        app:hintTextColor="@color/yellow"
        android:textStyle="bold"
        app:boxStrokeColor="@color/yellow"
        app:endIconMode="clear_text"
        app:endIconTint="@color/dark_yellow"
        app:layout_constraintStart_toStartOf="@id/clScrollUser"
        app:layout_constraintTop_toBottomOf="@id/tilSurname"
        app:layout_constraintEnd_toStartOf="@id/tilTelf">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etMail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textColor="@color/yellow" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilTelf"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_padding_min"
        android:hint="@string/telf"
        android:textColorHint="@color/dark_yellow"
        app:hintTextColor="@color/yellow"
        android:textStyle="bold"
        app:boxStrokeColor="@color/yellow"
        app:endIconMode="clear_text"
        app:endIconTint="@color/dark_yellow"
        app:layout_constraintStart_toEndOf="@+id/tilMail"
        app:layout_constraintTop_toTopOf="@id/tilMail"
        app:layout_constraintEnd_toEndOf="@id/clScrollUser">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etTelf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textColor="@color/yellow" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilTipVs"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_padding_default"
        android:hint="@string/login_TIP"
        android:textColorHint="@color/dark_yellow"
        app:hintTextColor="@color/yellow"
        android:textStyle="bold"
        app:boxStrokeColor="@color/yellow"
        app:endIconMode="clear_text"
        app:endIconTint="@color/dark_yellow"
        app:layout_constraintStart_toStartOf="@id/clScrollUser"
        app:layout_constraintTop_toBottomOf="@id/tilTelf"
        app:layout_constraintEnd_toEndOf="@id/clScrollUser">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etTipVs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textColor="@color/yellow" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilWork"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_padding_default"
        android:hint="@string/work"
        android:textColorHint="@color/dark_yellow"
        app:hintTextColor="@color/yellow"
        android:textStyle="bold"
        app:boxStrokeColor="@color/yellow"
        app:endIconMode="clear_text"
        app:endIconTint="@color/dark_yellow"
        app:layout_constraintStart_toStartOf="@id/clScrollUser"
        app:layout_constraintTop_toBottomOf="@id/tilTipVs"
        app:layout_constraintEnd_toEndOf="@id/clScrollUser">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etWork"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textColor="@color/yellow" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilCharge"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_padding_default"
        android:hint="@string/charge"
        android:textColorHint="@color/dark_yellow"
        app:hintTextColor="@color/yellow"
        android:textStyle="bold"
        app:boxStrokeColor="@color/yellow"
        app:endIconMode="clear_text"
        app:endIconTint="@color/dark_yellow"
        app:layout_constraintStart_toStartOf="@id/tilWork"
        app:layout_constraintTop_toBottomOf="@id/tilWork"
        app:layout_constraintEnd_toEndOf="@id/tilWork">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etCharge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textColor="@color/yellow" />
    </com.google.android.material.textfield.TextInputLayout>
    <ImageView
        android:id="@+id/icAddUser"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="@dimen/common_padding_default"
        app:layout_constraintStart_toStartOf="@id/tilWork"
        app:layout_constraintTop_toBottomOf="@id/tilCharge"
        app:layout_constraintEnd_toEndOf="@id/tilWork"
        android:src="@drawable/ic_add_circle_outline_yellow"/>


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cvNewUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:clickable="false"
        android:focusable="false"
        android:layout_marginTop="@dimen/common_padding_default"
        app:layout_constraintStart_toStartOf="@id/tilWork"
        app:layout_constraintTop_toBottomOf="@id/icAddUser">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clNewUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/common_padding_default">
            <ImageView
                android:id="@+id/icCloseAddUser"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_close_blue"
                android:clickable="true"
                android:focusable="true"
                app:layout_constraintTop_toTopOf="@id/clNewUser"
                app:layout_constraintEnd_toEndOf="@id/clNewUser"/>
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvNewUser"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/new_vs"
                android:textSize="24sp"
                android:fontFamily="@font/squada_one"
                android:textColor="@color/dark_blue"
                android:textAppearance="?attr/textAppearanceHeadline1"
                app:layout_constraintStart_toStartOf="@id/clNewUser"
                app:layout_constraintEnd_toEndOf="@id/clNewUser"
                app:layout_constraintBottom_toTopOf="@id/userAddDivider"
                android:gravity="center_horizontal"
                />
            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/userAddDivider"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:dividerColor="@color/dark_blue"
                app:dividerThickness="@dimen/cardview_default_radius"
                app:layout_constraintTop_toBottomOf="@id/tvNewUser"
                app:layout_constraintStart_toStartOf="@id/clNewUser"
                app:layout_constraintEnd_toEndOf="@id/clNewUser"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilUser_user"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/common_padding_min"
                android:layout_marginTop="@dimen/common_padding_default"
                android:hint="@string/new_vs"
                android:textColorHint="@color/dark_blue"
                app:hintTextColor="@color/dark_blue"
                android:textStyle="bold"
                app:boxStrokeColor="@color/dark_blue"
                app:endIconMode="clear_text"
                app:endIconTint="@color/dark_blue"
                app:layout_constraintStart_toStartOf="@id/clNewUser"
                app:layout_constraintTop_toBottomOf="@id/userAddDivider"
                app:layout_constraintEnd_toStartOf="@id/tilUser_pass">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etUser_user"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textColor="@color/dark_blue" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilUser_pass"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/common_padding_min"
                android:hint="@string/user_add_password"
                android:textColorHint="@color/dark_blue"
                app:hintTextColor="@color/dark_blue"
                android:textStyle="bold"
                app:boxStrokeColor="@color/dark_blue"
                app:endIconMode="clear_text"
                app:endIconTint="@color/dark_blue"

                app:layout_constraintStart_toEndOf="@id/tilUser_user"
                app:layout_constraintTop_toTopOf="@id/tilUser_user"
                app:layout_constraintEnd_toEndOf="@id/clNewUser">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etUser_pass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textColor="@color/dark_blue" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilUser_mail"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/user_add_mail"
                android:textColorHint="@color/dark_blue"
                app:hintTextColor="@color/dark_blue"
                android:textStyle="bold"
                app:boxStrokeColor="@color/dark_blue"
                app:endIconMode="clear_text"
                app:endIconTint="@color/dark_blue"
                android:layout_marginTop="@dimen/common_padding_min"
                app:layout_constraintStart_toStartOf="@id/userAddDivider"
                app:layout_constraintTop_toBottomOf="@id/tilUser_user"
                app:layout_constraintEnd_toEndOf="@id/userAddDivider"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etUser_mail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textColor="@color/dark_blue" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.checkbox.MaterialCheckBox
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/super_user"
                app:layout_constraintStart_toStartOf="@id/tilUser_mail"
                app:layout_constraintTop_toBottomOf="@id/tilUser_mail"/>

            <ImageView
                android:id="@+id/icNewUser"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="@dimen/common_padding_default"
                app:layout_constraintStart_toStartOf="@id/clNewUser"
                app:layout_constraintTop_toBottomOf="@id/tilUser_mail"
                app:layout_constraintEnd_toEndOf="@id/clNewUser"
                android:src="@drawable/ic_add_circle_yellow"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_user_cancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/yellow"
        android:text="@string/user_btn_cancel"
        android:textColor="@color/blue"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/common_padding_default"
        android:padding="@dimen/common_padding_min"
        android:layout_marginEnd="@dimen/common_padding_min"
        app:layout_constraintStart_toStartOf="@id/tilWork"
        app:layout_constraintTop_toBottomOf="@id/cvNewUser"
        app:layout_constraintEnd_toStartOf="@id/btn_user_save"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_user_save"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/yellow"
        android:text="@string/user_btn_save"
        android:textColor="@color/blue"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        android:textStyle="bold"
        android:padding="@dimen/common_padding_min"
        android:layout_marginStart="@dimen/common_padding_min"
        app:layout_constraintEnd_toEndOf="@id/tilWork"
        app:layout_constraintTop_toTopOf="@id/btn_user_cancel"
        app:layout_constraintStart_toEndOf="@id/btn_user_cancel"/>


</androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>