<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/dark_blue"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    >

    <ImageView
        android:id="@+id/logo_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo_cerberus_text_gold_288dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.227" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilTIP"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/login_TIP"
        android:textColorHint="@color/dark_yellow"
        app:hintTextColor="@color/yellow"
        android:textStyle="bold"
        app:boxStrokeColor="@color/yellow"
        app:endIconMode="clear_text"
        app:endIconTint="@color/dark_yellow"
        app:layout_constraintEnd_toEndOf="@id/logo_login"
        app:layout_constraintStart_toStartOf="@id/logo_login"
        app:layout_constraintTop_toBottomOf="@id/logo_login">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etTIP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textColor="@color/yellow" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/login_password"
        android:layout_marginTop="@dimen/common_padding_default"
        android:textColorHint="@color/dark_yellow"
        app:hintTextColor="@color/yellow"
        android:textStyle="bold"
        app:boxStrokeColor="@color/yellow"
        app:endIconTint="@color/dark_yellow"
        app:endIconMode="password_toggle"
        app:layout_constraintStart_toStartOf="@id/tilTIP"
        app:layout_constraintEnd_toEndOf="@id/tilTIP"
        app:layout_constraintTop_toBottomOf="@id/tilTIP"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textColor="@color/yellow"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/yellow"
        android:text="@string/login_btn_sign_in"
        android:textColor="@color/blue"
        android:clickable="true"
        android:focusable="true"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/common_padding_default"
        android:padding="@dimen/common_padding_min"
        app:layout_constraintStart_toStartOf="@id/tilPassword"
        app:layout_constraintEnd_toEndOf="@id/tilPassword"
        app:layout_constraintTop_toBottomOf="@id/tilPassword"/>

</androidx.constraintlayout.widget.ConstraintLayout>